k8s/applications/ai/opencode/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1  
kind: HTTPRoute  
metadata:  
  name: opencode-web  
  namespace: opencode  
spec:  
  parentRefs:  
    - name: internal  
      namespace: gateway  
    - name: external  
      namespace: gateway  
  hostnames:  
    - "opencode.smadja.dev"  
  rules:  
    - matches:  
        - path:  
            type: PathPrefix  
            value: /api/sse/  
      backendRefs:  
        - name: opencode-web-service  
          port: 5003
      timeouts:  
        request: "0s"
      filters:  
      - type: ResponseHeaderModifier  
        responseHeaderModifier:  
          add:  
            - name: Cache-Control  
              value: "no-cache"  
            - name: Connection  
              value: "keep-alive"  
            - name: Content-Type  
              value: "text/event-stream"
    - matches:  
        - path:  
            type: PathPrefix  
            value: /  
      backendRefs:  
        - name: opencode-web-service  
          port: 5003
